--- a/pages/courses.html
+++ b/pages/courses.html
@@ -7,20 +7,36 @@
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
-    <nav class="header">
-        <ul>
-            <li class="headerl"><a href="../index.html">Home</a></li>
-            <li class="headerl"><a href="about.html">About</a></li>
-            <li class="headerl"><a href="courses.html">Courses</a></li>
-        </ul>
-    </nav>
-    <p>Underneath is a small list of courses that intersts me a lot :D </p>
-    <ol>
-        <li><a href="https://www.bcit.ca/outlines/acit1620/">Fundamental web technologies</a></li>
-        <li><a href="https://www.bcit.ca/outlines/acit1420/">Intro to Systems admin</a></li>
-        <li><a href="https://www.bcit.ca/outlines/acit1515/">Scripting for IT</a></li>
-        <li><a href="https://www.bcit.ca/outlines/acit1630/">Database systems</a></li>
-    </ol>
-
+    <div class="container">
+        <nav class="header">
+            <ul>
+                <li class="headerl"><a href="../index.html">Home</a></li>
+                <li class="headerl"><a href="about.html">About</a></li>
+                <li class="headerl"><a href="courses.html">Courses</a></li>
+            </ul>
+        </nav>
+        <nav class="side">
+            <p><u class="sizes">My courses list: -</u></p>
+            <ul>
+                <li>1.ACIT 1620 </li>
+                <li>2.ACIT 1420</li>
+                <li>3.ACIT 1515</li>
+                <li>4.ACIT 1630</li>
+            </ul>
+</nav>
+            <p>Underneath is a small list of courses that intersts me a lot :D </p>
+        <nav class="main">
+            <ol>
+                <li><u><a href="courses.html">Courses:-</a></u></li>
+                <li><a href="https://www.bcit.ca/outlines/acit1620/">Fundamental web technologies</a></li>
+                <li><a href="https://www.bcit.ca/outlines/acit1420/">Intro to Systems admin</a></li>
+                <li><a href="https://www.bcit.ca/outlines/acit1515/">Scripting for IT</a></li>
+                <li><a href="https://www.bcit.ca/outlines/acit1630/">Database systems</a></li>
+            </ol>
+        </nav>
+        <footer>
+            <p>Footer</p>
+        </footer>
+    </div>
 </body>
 </html>
